Fix: continue alignment:links to support and documentation in the admin page https://github.com/presscustomizr/customizr/commit/a6b11603a11f2d40dcfc94b2e866e047c49b7c76 https://github.com/presscustomizr/customizr/commit/aca51a36cf0618f892dc393ccb62d228a7c3008d

--- a/assets/back/css/tc_admin.css
+++ b/assets/back/css/tc_admin.css
@@ -12,7 +12,8 @@
 	line-height: 26px;
 }
 #customizr-admin-panel.about-wrap .feature-section {
-		margin-top: 0px;
+  margin-top: 0px;
+  padding: 0;
 }
 .about-wrap .feature-section div {
 	text-align: center;
